# Gerenciador_Books

./: .gitattributes  README.md  alembic.ini
booksGen/: .env  alembic.ini  pyproject.toml
booksGen/booksgen/: main.py  models.py  security.py  settings.py
booksGen/booksgen/apps/: Auth.py  Books.py  users.py
booksGen/booksgen/db/: conection_bd.py  connection_db_redis.py
booksGen/booksgen/db/migrations/: env.py
booksGen/booksgen/db/migrations/versions/: 526bb3c60354_update_table_user.py  73df3871f329_update_table_user.py  8fd8c4fe0b65_update_table_user.py  95ad5ba44179_create_tables.py  a7b787d48c0f_create_tables.py  afa29f5b5013_updates_password_len.py  b1d90e4489b2_update_table_books.py  c000bf638113_update_table_user.py  e646ddaaeccd_update_table_user.py  e7b50c96471d_updates_tables.py
booksGen/booksgen/schemas/: schema_auth.py  schema_books.py  schema_messages.py  schema_users.py
booksGen/tests/: conftest.py  test_Auth.py  test_Book.py  test_Security.py  test_User.py
booksGen/tests/migrationsTests/: env.py
booksGen/tests/migrationsTests/versions/: 7ae9e307d917_updates_tables.py  c3d96aded088_updates_tables.py  eb7e5f51f824_create_tables_test.py
